--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet"  type = "text/css"  href = "./style.css" >   
+    <link rel="stylesheet"   type="text/css"   href="./style.css">
     <title>Sign up form</title>
 </head>
 
 <body>
-    <div>
-        <h1>Learn to code by watching others</h1>
-        <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but
-            understanding how developers thinks is invaluable.</p>
-    </div>
-    <div>
-        <p><strong>Try it free for 7 days</strong> then $20/mo. thereafter</p>
-        <form action="/action_page.php" method="get">
-            <input type="text" id="fname" name="first-name" value="" placeholder="First Name"/>
-            <input type="text" id="lname" name="last-name" value="" placeholder="Second Name"/>
-            <input type="email" id="lname" name="email" value="" placeholder="Email Address"/>
-            <input type="password" id="lname" name="password" value="" placeholder="Password"/>
-            <input type="button" name="send" value="CLAIM YOUR FREE TRIAL"/>
-          </form>
-          <p>By clicking the button you are agreeing to our <strong>Terms and Services</strong></p>
+    <div class="container">
+        <div class="page-text">
+            <h1>Learn to code by watching others</h1>
+            <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but
+                understanding how developers thinks is invaluable.</p>
+        </div>
+        <div>
+            <div class="cta round-corners container_shadow">
+                <p><strong>Try it free for 7 days</strong> then $20/mo. thereafter</p>
+            </div>
+            <div class="round-corners form container_shadow">
+                <form action="/action_page.php" method="get">
+                    <input class="round-corners" type="text" id="fname" name="first-name" value="" placeholder="First Name" />
+                    <input class="round-corners" type="text" id="lname" name="last-name" value="" placeholder="Second Name" />
+                    <input class="round-corners" type="email" id="lname" name="email" value="" placeholder="Email Address" />
+                    <input class="round-corners" type="password" id="lname" name="password" value="" placeholder="Password" />
+                    <input class="round-corners container_shadow" type="button" name="send" value="CLAIM YOUR FREE TRIAL" />
+                </form>
+                <p class="terms">By clicking the button you are agreeing to our <strong>Terms and Services</strong></p>
+            </div>
+        </div>
     </div>
 </body>
 
